# claude-code-deprecated

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .mcp.json  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  MASTER_PLAN.md  PROJECT_PLAN.md  README.md  assessment.html  blog.html  dashboard.html  demo.html  docker-compose.yml  enterprise.html  erfolgsgeschichten.html  handwerk.html  index.html  kmu.html  kontakt.html  loesungen.html  login.html  prompts.html  pyproject.toml  referenzen.html  requirements.txt  roi-calculator.html  sitemap.xml  startup.html  termin.html  tools.html  update_css.sh
.claude/: MEMORY.md  SOUL.md  USER.md  settings.json
.claude/agents/: ralph-loop.md  research-agent.md  security-reviewer.md  swarm-orchestrator.md
.claude/commands/: audit.md  deploy.md  fix-issue.md  research.md  review.md
.claude/hooks/: post-tool-edit.sh  post-tool-pr.sh  pre-compact.sh  pre-tool-bash.sh  session-start.sh  stop.sh  user-prompt-submit.sh
.claude/rules/: api-conventions.md  (+2 more)
.next/: trace
config/: __init__.py  logging_config.yaml  model_config.yaml  prompt_templates.yaml
css/: auth.css  blog-modern.css  breadcrumbs.css  color-scheme.css  contrast-fixes.css  footer-modern.css  header-modern.css  landing-page.css  language-switcher.css  loader.css  mobile-menu.css  performance-optimizations.css  prompt-library.css  teaser-sections.css  toast.css  tools-directory.css  ui-components.css
docs/: architecture.md  resources.md
examples/: basic_completion.py  chain_prompts.py  chat_session.py
includes/: footer.html  header.html
js/: comments.js  header-modern.js  include-handler.js  main.js  oauth-manager.js  performance.js  standardize-includes.js  translations.js  user-system.js
notebooks/: model_experimentation.ipynb  prompt_testing.ipynb  response_analysis.ipynb
server/: .env.example  .eslintrc.json  README.md  fix-typescript.sh  jest.config.js  package-lock.json  package.json  setup.sh  tsconfig.json
src/: __init__.py  cli.py  mcp_server.py  version.py
tasks/: PRD.md  lessons.md  open-findings.md  todo.md
tests/: conftest.py  test_api.py  test_api_app.py  test_api_endpoints.py  test_api_middleware.py  test_cli.py  test_evals.py  test_handlers_error.py  test_llm_base.py  test_llm_claude_client.py  test_llm_gpt_client.py  test_llm_init.py  test_llm_utils.py  test_log_index.py  test_mcp_server.py  test_persistence.py  test_prompt_chainer.py  test_prompt_few_shot.py  test_prompt_templates.py  test_routing.py  test_tiered_memory.py  test_utils_cache.py  test_utils_logger.py  test_utils_rate_limiter.py  test_utils_token_counter.py  test_version.py
(+220 files in other folders)
