[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-max"
version = "1.0.7"
description = "Gold-standard Claude Code template: 5-layer architecture, 123 skills, 5-router routing, FastAPI, eval framework, ccm CLI"
requires-python = ">=3.11,<4"
dependencies = [
    "anthropic>=0.87.0,<1.0",          # 0.87.0 fixes CVE-2026-34450 + CVE-2026-34452
    "cryptography>=46.0.6",           # fixes CVE-2026-34073 + 5 earlier CVEs; pulled by anthropic
    "httpx>=0.27.0,<1.0",
    "aiohttp>=3.9.0,<4.0",
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.7.0,<3.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0,<1.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
ml = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.0",
]
deploy = [
    "mcp>=1.0.0",
]

[project.scripts]
ccm = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]          # project root — puts /project on sys.path so `import src` resolves
include = ["src*"]     # include src/ and all subpackages

# ── ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (common in FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # assert is fine in tests

# ── mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
# Generated/stub packages that don't ship types
[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "chromadb.*", "faiss.*", "torch.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q --tb=short"

# ── coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
